fix: #38 Remove high z-index in select boxes on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5166,7 +5166,7 @@
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 padding-right: 0;
-                z-index: 8;
+                z-index: 1;
             }
 
             &::after {
